# open-vocabulary-od-benchmark

./: .gitignore  README.md  benchmark.py  main.py  pyproject.toml
models/: owl_vit.py  simple_od_models.py  yolo_uniow.py  yolo_world.py
utils/: base_model.py
